# interventions-project

./: .gitignore  README.md  TRAINING_SPEED_CHECKLIST.md  config.py  dev.ipynb  example_inference.py  main.py  pyproject.toml  run.py  train.py  utils.py  vllm_compatible.py
configs/: config.yaml
interventions_rl/data/: open_r1.py  system_prompts.py
interventions_rl/model/: __init__.py  interventions.py  interventions_config.yaml  interventions_utils.py  llama.py  llama_vllm.py  load_model.py  modelings_Intervenable_qwen3.py  qwen.py  qwen2_vllm.py  qwen3.py  qwen3_vllm.py  register_vllm.py
interventions_rl/trainer/: __init__.py  grpo_trainer.py  train_grpo.py
scripts/: start_vllm_server.sh  train_grpo.sh  train_simple.sh
scripts/accelerate/: ds_zero2_4gpu.yaml  fsdp.yaml
