[project]
name = "interventions-project"
version = "0.1.0"
description = "Project for the interventions RL tuning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "black>=26.1.0",
    "configmate>=0.1.8",
    "ipykernel>=7.2.0",
    "loguru>=0.7.3",
    "math-verify>=0.9.0",
    "nnsight>=0.5.15",
    "pyvene>=0.1.8",
    "transformers>=4.57.6",
    "trl>=0.27.2",
    "vllm==0.12.0",
]
