[project]
name = "interventions-project"
version = "0.1.0"
description = "Project for the interventions RL tuning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "black>=26.1.0",
    "configmate>=0.1.8",
    "deepspeed>=0.18.5",
    "ipykernel>=7.2.0",
    "liger-kernel>=0.6.5",
    "loguru>=0.7.3",
    "math-verify>=0.9.0",
    "nnsight>=0.5.15",
    "nvitop>=1.6.2",
    "pyvene>=0.1.8",
    "tensorboard>=2.20.0",
    "transformers>=4.57.6",
    "trl>=0.27.2",
    "vllm==0.12.0",
    "wandb>=0.24.2",
]
